# kirino

./: .all-contributorsrc  Cargo.toml  LICENSE  LICENSE.MIT  README.md  TODO.md  go.mod  go.sum  install.sh  kirino.toml
api/: main.go
app/: LICENSE  config.go  license.go  main.go
app/assets/: index.html  main.js  style.css
app/auth/: config.go  doc.go  users.go
app/views/: about.html  base.html  dash.html  home.html  libraries.html  library.html  manage.html  new_library.html  play.html  results.html  search.html  series.html
ayase/: .rustfmt.toml  Cargo.toml  README.md  build.rs
ayase/assets/: style.sass
ayase/lang/: en.ftl
ayase/proto/: Cargo.toml
ayase/proto/proto/: image.proto  kirino.proto
ayase/scripts/: build.sh
ayase/src/: BANNER.txt  assets.rs  i18n.rs  icon.rs  lib.rs  main.rs  navigation.rs  player.rs  reader.rs  util.rs  welcome.rs
ayase/src/views/: base.hbs  dash.hbs  details.rs  library.rs  mod.rs  plugins.hbs  preferences.rs  sharing.rs
ayase/src/views/admin/: home.hbs
ayase/src/views/welcome/: account.hbs  start.hbs
ayase/src/widgets/: item.rs  library.rs  mod.rs  player.rs  plugin.rs
cli/: main.go  main.go.old
core/: config.go  fetchers.go  libraries.go  main.go  play.go  providers.go  scanner.go  services.go  tasks.go  users.go
fetchers/invidious/: config.go  main.go
fetchers/podcastindex/: api.go  config.go  main.go  types.go
kirino_core/: Cargo.toml
kirino_core/src/: config.rs  errors.rs  lib.rs
kirino_indexer/: Cargo.toml  README.md
kirino_indexer/src/: lib.rs
kirino_proto/: Cargo.toml  build.rs
kirino_proto/proto/: kirino.proto  kiririn.proto  music.proto  title.proto  visual.proto
kirino_proto/src/: lib.rs
kiririn/: Cargo.toml
kiririn/src/: api.rs  doc.rs  lib.rs  main.rs  runtime.rs
pkg/anidb/: config.go  doc.go
pkg/anidb/titles/: main.go  types.go
pkg/scsc/: main.go
src/: image.rs  init.rs  lib.rs  main.rs  server.rs  web.rs
