[package]
name = "kirino_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
burrow = { version = "0.1.0", path = "../../burrow" }
ffthumb = { version = "0.1.0", optional = true }
infer = { version = "0.12.0", default-features = false, features = ["cfb"] }
kirino_core = { version = "0.1.0", path = "../kirino_core" }
rayon = "1.6.1"
symphonia = { version = "0.5.2", default-features = false, optional = true }

[features]
default = ["symphonia_default", "ffthumb"]
symphonia_default = ["symphonia", "symphonia_flac", "symphonia_mp3", "symphonia/default"]

symphonia = ["dep:symphonia"]
symphonia_flac = ["symphonia/symphonia-bundle-flac"]
symphonia_wav = ["symphonia/symphonia-format-wav", "symphonia/symphonia-codec-pcm"]
symphonia_mp3 = ["symphonia/symphonia-bundle-mp3"]

ffthumb = ["dep:ffthumb"]
